--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>header link one</h1>
-    <h1>header link two</h1>
-    <h1>header link three</h1>
+    <div class="header">
+        <div class="Logo">Header</div>
+        <div class="Links">Links</div>
+    </div>
+    <div class="one">
+        <p>Article 1 + Photo</p>
+    </div>
+    <div class="two">
+        <p>Article 2 + 4 Photos</p>
+    </div>
+    <div class="three">
+        <p>Article 3</p>
+    </div>
+    <div class="four">
+        <p>Prompt</p>
+    </div>
+    <div class="footer">Copyright &copy; amolinar 2023 </div>
 </body>
 </html>
