Fine tuning on the layout in css

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
         <div class="Links">Links</div>
     </div>
     <div class="one">
-        <p>Article 1 + Photo</p>
+        <div class="left">Article 1</div>
+        <div class="right">Picture</div>
     </div>
     <div class="two">
-        <p>Article 2 + 4 Photos</p>
+        <p class="title">Article Title</p>
+        <div class="pic-container">4 Pictures</div>
     </div>
     <div class="three">
-        <p>Article 3</p>
+        <p class="body">Article 3 Body</p>
+        <p class="author">Article 3 quote</p>
     </div>
     <div class="four">
         <p>Prompt</p>
     </div>
-    <div class="footer">Copyright &copy; amolinar 2023 </div>
+    <div class="footer">Copyright &copy; amolinar471 2023 </div>
 </body>
 </html>
