I ended up changing the html and css files drastically. mainly to simplify the flex boxes and made laying out a touch easier.

--- a/index.html
+++ b/index.html
@@ -10,22 +10,38 @@
 <body>
     <div class="header">
         <div class="Logo">Header</div>
-        <div class="Links">Links</div>
+        <div class="Links">
+            <a href="url">Link1</a>
+            <a href="url">Link2</a>
+            <a href="url">Link3</a>
+        </div>
     </div>
     <div class="one">
-        <div class="left">Article 1</div>
+        <div class="left">
+            <div>Article 1 Title</div>
+            <div>Article 1 Body</div>
+            <div>Signup button</div>
+        </div>
         <div class="right">Picture</div>
     </div>
     <div class="two">
-        <p class="title">Article Title</p>
-        <div class="pic-container">4 Pictures</div>
+        <div class="title">Article Title</div>
+        <div class="pic-container">
+            <div>Pic1</div>
+            <div>Pic2</div>
+            <div>Pic3</div>
+            <div>Pic4</div>
+        </div>
     </div>
     <div class="three">
-        <p class="body">Article 3 Body</p>
-        <p class="author">Article 3 quote</p>
+        <div class="body">Article 3 Body</div>
+        <div class="author">Article 3 quote</div>
     </div>
     <div class="four">
-        <p>Prompt</p>
+        <div>Box
+            <div>Text</div>
+            <button>Button</button>
+        </div>
     </div>
     <div class="footer">Copyright &copy; amolinar471 2023 </div>
 </body>
