My effort was focused in divs four and three to get those looking good. Mainly focused on placement.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,21 @@
         </div>
     </div>
     <div class="three">
-        <div class="body">Article 3 Body</div>
-        <div class="author">Article 3 quote</div>
+        <div class="body">
+            <p>Don’t underestimate the power of vision and direction. These 
+                are irresistible forces, able to transform what might appear to be 
+                unconquerable obstacles into traversable 
+                pathways and expanding opportunities.</p>
+        </div>
+        <div class="author">-Dr. Jordan B. Peterson</div>
     </div>
     <div class="four">
-        <div>Box
-            <div>Text</div>
-            <button>Button</button>
+        <div class="box">
+            <div>
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for the product using the sign-up button.</p>
+            </div>
+            <button>Sign Up</button>
         </div>
     </div>
     <div class="footer">Copyright &copy; amolinar471 2023 </div>
