Finished up section 2: arranged the 4 pictures and text to look like design.png

--- a/index.html
+++ b/index.html
@@ -18,19 +18,27 @@
     </div>
     <div class="one">
         <div class="left">
-            <div>Article 1 Title</div>
-            <div>Article 1 Body</div>
-            <div>Signup button</div>
+            <h3>This website is awesome</h3>
+            <div>Body Text is supposed to be intresting, and eye catching!</div>
+            <button>Signup button</button>
         </div>
         <div class="right">Picture</div>
     </div>
     <div class="two">
-        <div class="title">Article Title</div>
+        <div class="title">
+            <h1>Article Title</h1>
+        </div>
         <div class="pic-container">
-            <div>Pic1</div>
-            <div>Pic2</div>
-            <div>Pic3</div>
-            <div>Pic4</div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="pic-text">
+            <div>This is some subtext under an image.</div>
+            <div>This is some subtext under an image.</div>
+            <div>This is some subtext under an image.</div>
+            <div>This is some subtext under an image.</div>
         </div>
     </div>
     <div class="three">
@@ -51,6 +59,8 @@
             <button>Sign Up</button>
         </div>
     </div>
-    <div class="footer">Copyright &copy; amolinar471 2023 </div>
+    <div class="footer">
+        <p>Copyright &copy; amolinar471 2023 </p>
+    </div>
 </body>
 </html>
